...
    <string name="settings_title">Settings</string>
    <string name="username_input_hint">Username</string>
    <string name="username_input_helper_text">This is how your name will be displayed on the app</string>
    <string name="personal_data_label">Personal data</string>
    <string name="backups_label">Backups</string>
    <string name="daily_backup_label">Enable daily backup</string>
    <string name="synchronization_time_hint">Select a time</string>
    <string name="synchronization_time_helper_text">Synchronizations will be tried everyday at this time</string>
    <string name="export_data_button_text">Export data</string>
    <string name="import_data_button_text">Import data</string>
    <string name="save_button_text">Save</string>
    <string name="synchronization_time_picker_label">Select synchronization time</string>
    <string name="filter_menu_item">Filter</string>
...
    <string name="search_button">Search</string>
    <string name="all_priorities">All priorities</string>
    <string name="all_status">All status</string>
    <string name="search_studies_dialog_title">Search studies</string>
    <string name="all_subjects">All subjects</string>
    <string name="search_finances_dialog_title">Search finances</string>
    <string name="time_format_instruction">The synchronization time must be in the format \"HH:MM AM\" or \"HH:MM PM\"</string>
    <string name="export_data_dialog_title">Exporting data</string>
    <string name="export_data_dialog_message">Please wait</string>
    <string name="successful_export_dialog_title">Backup updated</string>
    <string name="successful_export_dialog_message">Your backup was successfully updated!</string>
    <string name="successful_export_close_button">Close</string>
    <string name="error_export_dialog_title">Error</string>
...
